# blinddeck

./: .gitignore  .mdformat.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  PLAY.md  README.md  balatrobot.json  balatrobot.lua  pyproject.toml
.agents/skills/balatrobot/: SKILL.md
.cursor/rules/: sync-docs-after-changes.mdc
.github/workflows/: release_please.yml
docs/: OVERVIEW.md  api.md  cli.md  contributing.md  example-bot.md  index.md  installation.md
knowledge/balatro/: README.md  balatro-bosses-verified.json  balatro-decks-verified.json  balatro-jokers-overrides.json  balatro-jokers-verified.json  balatro-planets-overrides.json  balatro-planets-verified.json  balatro-rules-verified.json  balatro-score-anchors.md  balatro-stakes-verified.json  balatro-tags-verified.json  balatro-vouchers-verified.json  build_knowledge.py
scripts/: find_boss_seed.py  find_charm_seed.py  find_economy_seed.py  find_foil_seed.py  find_tag_pair_seed.py
src/balatrobot/: __init__.py  config.py
src/balatrobot/cli/: __init__.py  api.py  client.py  serve.py
src/lua/: settings.lua
src/lua/endpoints/: buy.lua  cash_out.lua  challenge.lua  challenges.lua  discard.lua  load.lua  menu.lua  pack.lua  play.lua  rearrange.lua  reroll_boss.lua  save.lua  select.lua  sell.lua  set.lua  skip.lua  sort.lua  start.lua  use.lua
src/lua/utils/: cashout_preview.lua  challenges.lua  consumable.lua  debugger.lua  errors.lua  gamestate.lua  hand_order.lua  logger.lua  openrpc.json  types.lua
tests/cli/: test_challenges.py  test_client.py  test_help.py  test_know_preflight.py  test_play_helpers.py
tests/fixtures/: fixtures.json  generate.py  verify.py
tests/fixtures/add/: state-SHOP--jokers.count-0--consumables.count-0--vouchers.count-0--packs.count-0.jkr
tests/lua/: README.md  tag_seeds.py
tools/play/: README.md  act.py  actions.py  bot.ps1  bot_client.py  challenges.py  commands.py  envelope.py  estimate.py  estimate_jokers.py  estimate_registry.md  exec.py  hand.py  help.py  help_catalog.py  know.py  know_lib.py  layers.py  query.py  rpc.py  serve.example.ps1  state.py  view.py
(+69 files in other folders)
