[project]
name = "balatrobot"
version = "1.5.2"
description = "BlindDeck — Balatro play desk with API and helpers"
readme = "README.md"
authors = [
  { name = "S1M0N38" },
  { name = "stirby" },
  { name = "phughesion" },
  { name = "besteon" },
  { name = "giewev" },
  { name = "FFFishes7", email = "es_fish@outlook.com" },
]
requires-python = ">=3.13"
dependencies = ["httpx>=0.28.1", "typer>=0.15"]
classifiers = [
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.13",
]

[project.scripts]
balatrobot = "balatrobot.cli:main"

[project.urls]
Homepage = "https://github.com/FFFishes7/blinddeck"
Issues = "https://github.com/FFFishes7/blinddeck/issues"
Repository = "https://github.com/FFFishes7/blinddeck"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.extend-select = ["I"]
lint.task-tags = ["FIX", "TODO", "HACK", "WARN", "PERF", "NOTE", "TEST"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "--dist loadscope -m \"not debug\""
markers = [
  "dev: marks tests that are currently developed",
  "integration: marks integration tests that actually start Balatro (deselect with '-m \"not integration\"')",
  "debug: marks tests that require debug-only API endpoints (deselect with '-m \"not debug\"')",
  "flaky: marks tests that may fail intermittently (use with pytest-rerunfailures)",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"

[dependency-groups]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-rerunfailures>=16.1",
  "pytest-xdist[psutil]>=3.8.0",
  "tqdm>=4.67.1",
]
dev = [
  "commitizen>=4.11.0",
  "mdformat>=0.7.22,<0.8.0",
  "mdformat-footnote>=0.1.2",
  "mdformat-frontmatter>=2.0.8",
  "mdformat-gfm>=1.0.0",
  "mdformat-gfm-alerts>=2.0.0",
  "mdformat-mkdocs>=5.1.1",
  "mdformat-simple-breaks>=0.0.1",
  "ruff>=0.15.20",
  "ty>=0.0.9",
]
